<resources>
    <string name="app_name">First Application</string>
    <string name="your_score_is_9_out_of_11">Your score is %1$d out of %2$d</string>
    <string name="finish">FINISH</string>
    <string name="junior">Junior</string>
    <string name="congratulations">Congratulations!</string>
    <string name="result">Result</string>
    <string name="trophy">Trophy</string>
    <string name="flag_image_description">Image of Flag</string>
    <string name="question_text">What country does this flag belong to?</string>
    <string name="quiz_progress_text">%1$d / %2$d</string>
    <string name="option">Option</string>
    <string name="submit_text">SUBMIT</string>
    <string name="next_question">GO TO NEXT QUESTION</string>
    <string name="icon_account_description">Icon for Account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="password_autofill_hint">password</string>
</resources>
